# alternating-caps

./: .gitignore  CMakeLists.txt  Makefile  README.md  minor5.c
